<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShareActivity"
        android:background="@color/purpleLight">

    <TextView
            android:text="@string/share_the_question_with_friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:background="@drawable/half_eclipse" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_text_share_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textColor="@color/purple"
            android:hint="@string/share_title_hint"
            android:selectAllOnFocus="true"
            android:textSize="18sp"
            android:textColorHint="@android:color/darker_gray"
            android:background="@drawable/rectangle_rounded_corners"
            android:gravity="top"
            android:padding="32dp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/share_question_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_share_quesion"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_share_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/button_purple"
            app:backgroundTint="@null"
            android:backgroundTintMode="add"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>