<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/purpleLight">


    <TextView
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:background="@drawable/half_eclipse" />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolsBar"
            android:background="@drawable/rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_refresh_24"
                android:id="@+id/button_change_question"
                android:layout_weight="1"
                android:background="@android:color/transparent" />

        <TextView
                android:text="@string/question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:gravity="center" />

        <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_share_24"
                android:id="@+id/button_share_question_1"
                android:layout_weight="1"
                android:background="@android:color/transparent" />
    </LinearLayout>

    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/text_view_question"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="@drawable/rectangle_rounded_corners"
            app:layout_constraintTop_toBottomOf="@+id/toolsBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/button_true"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" />

    <Button
            android:text="@string/true_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_true"
            android:background="@drawable/button_true"
            app:backgroundTint="@null"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:rippleColor="#00000000"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintStart_toEndOf="@+id/button_false"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp" />

    <Button
            android:text="@string/false_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/button_false"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button_true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>